tests/ui/feature-gates/feature-gate-fn_static.stderr
error[E0658]: use of unstable library feature `fn_static`
  --> $DIR/feature-gate-fn_static.rs:1:5
   |
LL | use std::ops::FnPtr;
   |     ^^^^^^^^^^^^^^^
   |
   = note: see issue #148768 <https://github.com/rust-lang/rust/issues/148768> for more information
   = help: add `#![feature(fn_static)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
