tests/ui/feature-gates/feature-gate-fn_static.rs
use std::ops::FnPtr;
//~^ ERROR: use of unstable library feature `fn_static` [E0658]

fn main() {}
